# herdtools7-litmus-translator

herd/: archExtra_herd.ml  dune  islaConverter.ml  islaConverter.mli  loader.ml  runTest.ml
herd/translator/: islaLitmusCommon.ml  islaLitmusConverter.ml  islaLitmusErrors.ml  islaLitmusPrinter.ml  islaLitmusTest.ml
lib/: myLib.ml
