(dirs :standard \ tests libdir)

(include_subdirs unqualified)

(rule (copy ../Version.ml Version.ml))

(ocamllex lexConf_herd)

(executable
 (name herd)
 (public_name litmus-translator)
 (libraries unix herdtools)
 (modules_without_implementation
  AArch64Sig
  action
  arch_herd
  monad
  sem
  XXXMem
  port))

